<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/settings"/>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_placeholder"
                android:title="@string/help_me"/>
        <item
                android:id="@+id/nav_wiki"
                android:icon="@drawable/ic_placeholder"
                android:title="@string/wiki"/>
        <item
                android:id="@+id/nav_hotlines"
                android:icon="@drawable/ic_placeholder"
                android:title="@string/emergency_hotlines"/>
        <item
                android:id="@+id/nav_rescue"
                android:icon="@drawable/ic_placeholder"
                android:title="@string/rescue_someone"/>
    </group>

</menu>