<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">
<!--This is the list of items that will be displayed in navigation drawer-->
    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/digs_settings"
            android:title="@string/settings"/>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/digs_help"
                android:title="@string/help_me"/>
        <item
                android:id="@+id/nav_wiki"
                android:icon="@drawable/digs_wiki"
                android:title="@string/wiki"/>
        <item
                android:id="@+id/nav_hotlines"
                android:icon="@drawable/digs_hotlines"
                android:title="@string/emergency_hotlines"/>
    </group>

</menu>